# python-project-base-template

./: .gitignore  .pre-commit-config.yaml  pyproject.toml
